Flip Binary Tree To Match Preorder Traversal